Added better handling for shor_postprocess output

--- a/framework.ipynb
+++ b/framework.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "63d2e112",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,9 @@
     "    counts = result.get_counts()\n",
     "    factors = shor_postprocess(counts, N=15, a=7)\n",
     "    # It should loop there if factors is empty\n",
-    "    return factors\n"
+    "    if len(factors)==2: return factors\n",
+    "    elif len(factors)==1: return [factors[0],N/factors[0]]\n",
+    "    else: return \"None factors were found\"\n"
    ]
   },
   {
@@ -204,16 +206,21 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Running actual code here\n"
+    "## Running actual code here\n",
+    "\n",
+    "t and n values should be changed, they are chosen a bit ambiguously now"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1db8087c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "n = N.bit_length()\n",
+    "t=2*n\n",
+    "\n",
     "backend = QrBackendV2(qr_provider, num_qubits = n+t)"
    ]
   },
