Added better postprocessing function. Minor adjustments

--- a/framework.ipynb
+++ b/framework.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "bf6380dd",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "38ed64d5",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "f77ecfa7",
    "metadata": {},
    "outputs": [],
@@ -176,28 +176,58 @@
     "\n",
     "    return list(set(results))  # Remove duplicates\n",
     "\n",
-    "\n",
     "def FindSolution(N,backend,shots):\n",
     "    # currently just for 1 a value, should wrap it in a loop and look over multiple a values\n",
     "    a = GetaValue(N)\n",
-    "    if np.gcd(a,N)>1: return [np.gcd(a,N)]\n",
     "    print(f\"Value of a: {a}\")\n",
+    "    if np.gcd(a,N)>1: return [np.gcd(a,N)]\n",
     "    # dummy values for n and t, just to get the structure\n",
     "    n = N.bit_length()\n",
     "    t = 2*n\n",
     "    print(f\"Number of total qbits used: {n+t}\")\n",
     "    circuit = GetCircuit(N,n,t,a)\n",
-    "    circuit_transpiled = transpile(circuit, backend,initial_layout=[i for i in range(0, qc.num_qubits)])\n",
+    "    circuit_transpiled = transpile(circuit, backend,initial_layout=[i for i in range(0, n+t)])\n",
     "    print(\"Running the job\")\n",
     "    job = backend.run(circuit_transpiled, shots = shots)\n",
     "    print(\"Done!\")\n",
     "    result = job.result()\n",
     "    counts = result.get_counts()\n",
-    "    factors = shor_postprocess(counts, N=15, a=7)\n",
+    "    factors = shor_postprocess(counts, N, a)\n",
     "    # It should loop there if factors is empty\n",
     "    if len(factors)==2: return factors\n",
     "    elif len(factors)==1: return [factors[0],N/factors[0]]\n",
-    "    else: return \"None factors were found\"\n"
+    "    else: return \"None factors were found\"\n",
+    "\n",
+    "\n",
+    "# this function should be better?\n",
+    "\n",
+    "def shor_postprocess_better(measurement_counts,N,a):\n",
+    "    value = max((key for key in measurement_counts if key.strip('0')), key=measurement_counts.get)\n",
+    "    decimal_val = int(value, 2)\n",
+    "    results=[]\n",
+    "    # Estimate r: period of a^x mod N\n",
+    "    phase = decimal_val / (2 ** len(value))\n",
+    "    frac = Fraction(phase).limit_denominator(N)\n",
+    "    r = frac.denominator\n",
+    "\n",
+    "    # Skip if r is even or invalid\n",
+    "    if r % 2 != 0:\n",
+    "        return []\n",
+    "\n",
+    "    # Compute potential factors\n",
+    "    plus = pow(a, r // 2) + 1\n",
+    "    minus = pow(a, r // 2) - 1\n",
+    "    factor1 = np.gcd(plus, N)\n",
+    "    factor2 = np.gcd(minus, N)\n",
+    "\n",
+    "    if 1 < factor1 < N:\n",
+    "        results.append(factor1)\n",
+    "        end=True\n",
+    "    if 1 < factor2 < N:\n",
+    "        results.append(factor2)\n",
+    "        end=True\n",
+    "\n",
+    "    return list(results)\n"
    ]
   },
   {
@@ -213,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "1db8087c",
    "metadata": {},
    "outputs": [],
@@ -226,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "2202f01b",
    "metadata": {},
    "outputs": [
@@ -234,19 +264,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Value of a: 109\n",
-      "Number of total qbits used: 24\n",
-      "Running the job\n",
-      "Done!\n"
+      "Value of a: 52\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[np.int64(13)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
