Minor fixes for main function for clarity

--- a/framework.ipynb
+++ b/framework.ipynb
@@ -192,7 +192,7 @@
     "    print(\"Done!\")\n",
     "    result = job.result()\n",
     "    counts = result.get_counts()\n",
-    "    factors = shor_postprocess(counts, N, a)\n",
+    "    factors = shor_postprocess(counts, N=N, a=a)\n",
     "    # It should loop there if factors is empty\n",
     "    if len(factors)==2: return factors\n",
     "    elif len(factors)==1: return [factors[0],N/factors[0]]\n",
