Fixed errors and unused variables

--- a/framework.ipynb
+++ b/framework.ipynb
@@ -202,7 +202,7 @@
     "# this function should be better?\n",
     "\n",
     "def shor_postprocess_better(measurement_counts,N,a):\n",
-    "    value = max((key for key in measurement_counts if key.strip('0')), key=measurement_counts.get)\n",
+    "    value = max((key for key in measurement_counts if int(key,2)), key=measurement_counts.get)\n",
     "    decimal_val = int(value, 2)\n",
     "    results=[]\n",
     "    # Estimate r: period of a^x mod N\n",
