Added TODO list at the beginning

--- a/framework.ipynb
+++ b/framework.ipynb
@@ -28,20 +28,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4cca6ad",
+   "id": "d8e20e55",
    "metadata": {},
    "source": [
-    "Globals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "bf6380dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 143"
+    "\n",
+    "# TODO\n",
+    "\n",
+    " - add a loop to look over multiple a values\n",
+    " - check if phiAdd, cphiAdd and ccphiAdd do the calculation correctly"
    ]
   },
   {
@@ -343,11 +337,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1db8087c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "N = 143\n",
     "n = N.bit_length()\n",
     "t=2*n\n",
     "\n",
